--- a/css/styles.css
+++ b/css/styles.css
@@ -657,6 +657,7 @@ ul {
   border-radius: 4px;  
   padding: 15px 16px;
   color: var(--primary-text-color);
+  outline: 0;
 }
 .subscribe-button {
   display: flex;
@@ -666,8 +667,8 @@ ul {
   height: 50px;
   background-color: var(--accent-color);
   font-weight: 700;
-  font-size: 14px;
-  line-height: calc(16 / 14);
+  font-size: 16px;
+  line-height: calc(30 / 16);
   color: var(--button-filtr-font-active);
   border-radius: 4px;
   margin-left: 12px;
@@ -1001,7 +1002,7 @@ ul {
     border-radius: 4px;
     border: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin: 20px auto 0;
+    margin: 30px auto 0;
     /* маржин равнения */
    }
 
